An Occean Project

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
  @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Lato&family=Poppins:wght@200;400&display=swap');
 body{
-  background-color: darkblue;
+  background-color: #1d3867;
   background-image: url('https://uploads-ssl.webflow.com/62a6e21010ae344f137a2769/62df788d8c33b8614696c2ff_shutterstock_1009352120-transcode.mp4 ');
 }
 .home-con{
