--- a/src/App.css
+++ b/src/App.css
@@ -62,7 +62,7 @@ filter: drop-shadow(4px 2px 20px #40a9e9);
   display: none;
 }
 body{
-  background-image: linear-gradient(120deg,#1d3867,#139ef4,#09aefa)
+  background-image: radial-gradient(circle at top right,#1d3867 20%,#b4dcef 20%,#033554 60%)
 
 }
 }
